crates/sakka-test/tests/trybuild/custom_codec_with_custom_encoding.stderr
error: Cannot use #[sakka(codec(...))] with #[sakka(decode_with(...))] or #[sakka(encode_with(...))]
  --> tests/trybuild/custom_codec_with_custom_encoding.rs:23:5
   |
23 | /     #[sakka(codec = U8Codec, encode_with = encode_u8)]
24 | |     value: u8,
   | |_____________^
